--- a/src/Corvus/EventBundle/Resources/views/Emails/eventSuspend.html.twig
+++ b/src/Corvus/EventBundle/Resources/views/Emails/eventSuspend.html.twig
@@ -1,8 +1,9 @@
-<h3>Event "{{ event.title }}" has been suspended</h3><br>
+<h3>Food picking time for "{{ event.title }}" has ended</h3><br>
 
-Hello, {{ name }}<br>
+Hello, {{ name }}<br><br>
 
-Event "{{ event.title }}" has been suspended.<br><br>
+We want to announce you that food picking time for "{{ event.title }}" has ended.<br>
+Food will be ordered soon.<br><br>
 
 Vizit our page: <a href="{{ url('login') }}">CorvusFood</a>.<br><br>
 
